# sofvary-desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/prompt-templates/: agents.md  claude.md  handoff.md  react-sqlite-fallback.md  repair.md  runtime-repair.md  task.md  tools.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/core/: acp_client.rs  agent_catalog.rs  agent_cli_bridge.rs  agent_config.rs  agent_context_mcp.rs  agent_gateway.rs  agent_install.rs  agent_terminal.rs  ai_agent_app_runtime.rs  ai_gateway.rs  ai_provider_adapters.rs  ai_provider_config.rs  app_capsule.rs  app_release.rs  build_thread.rs  builtin_resources.rs  canvas2d_runtime.rs  cloud_config.rs  data_table_runtime.rs  deep_link_install.rs  desktop_widget_runtime.rs  file_processor_runtime.rs  gateway_event_buffer.rs  gateway_uni_event.rs  harness_engine.rs  llm_provider_config.rs  markdown_knowledge_runtime.rs  mod.rs  pack_manager.rs  pack_registry.rs  pack_types.rs  packager_toolchain.rs  pi_agent.rs  policy_engine.rs  policy_types.rs  prompt_template.rs  published_app_packager.rs  react_project_runtime.rs  react_sqlite_runtime.rs  react_vite_runtime.rs  (+13 more)
apps/desktop/src-tauri/src/platform/: dirs.rs  host_shell.rs  linux.rs  macos.rs  mod.rs  path_policy.rs  process.rs  protocol.rs  secure_store.rs  sidecar.rs  stdio.rs  (+2 more)
(+145 files in other folders)
